[build-system]
requires = ['poetry-core>=1.0.0', 'wheel',]
build-backend = 'poetry.core.masonry.api'


[tool.coverage.run]
branch = true
relative_files = true
omit = [
    '.tox/*',
    'tests/*',
]


[tool.flake8]
max-line-length = 120
extend-ignore = ''  # https://www.flake8rules.com/
max-complexity = 15  # Info: https://en.wikipedia.org/wiki/Cyclomatic_complexity
per-file-ignores = """\
# F401: Ignore "unused" imports
# F403: Ignore star imports
# F405: Ignore names from star imports
__init__.py:F401,F403,F405\
"""


[tool.poetry]
name = 'python_ms'
version = '1.0.2'
description = "A Python equivalent to the JavaScript ms package."

authors = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]
maintainers = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]

include = ['CHANGELOG.md', 'LICENSE',]
license = 'MIT'
readme = 'README.md'

homepage = 'https://pypi.org/project/python-ms/'
repository = 'https://github.com/Diapolo10/python-ms'
documentation = 'https://github.com/Diapolo10/python-ms/tree/main/docs'

keywords = [
    'package',
    'python3',
    'time',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed',
]


[tool.poetry.dependencies]
python = '^3.10'


[tool.poetry.dev-dependencies]
coverage = {version = '^7.1.0', extras = ['toml',]}
flake8 = '^6.0.0'
mypy = '^1.0'
pylint = '^2.16.1'
pyproject-flake8 = '^6.0.0'
pytest = '^7.2.1'
pytest-cov = '^4.0.0'
tox = '^3.28.0'
tox-gh-actions = '^2.12.0'


[tool.poetry.urls]
"Tracker" = 'https://github.com/Diapolo10/python-ms/issues'
"Changelog" = 'https://github.com/Diapolo10/python-ms/blob/main/CHANGELOG.md'


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    # https://vald-phoenix.github.io/pylint-errors/
    'E1102',  # ms is not callable (not-callable)
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:tests/reports/coverage-html \
--cov-report xml:tests/reports/coverage.xml \
--ignore=docs/
"""
testpaths = [
    'tests',
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = True

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    pypy-3.10: pypy3

[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows

[testenv]
passenv = GITHUB_*
deps =
    coverage
    coveralls[toml]
    pytest
    pytest-cov
commands =
    coverage run -m pytest
"""
